src/main/docs/raml/examples/errors/newsNotFound.raml
|
  {
    "message" : "News with this id not found",
    "code" : "Not Found",
    "_links" : {
      "self" : {
        "href" : "http://localhost:8080/news/1"
      }
    }
  }